samples/errors/type_error_add.lox
// Error: Cannot add different types
// expect: runtime error
print "hello" + 1;
